@@ -6,6 +6,10 @@ CHANGES IN CUPS V2.0.1
 	- Security: SSLv3 is now disabled by default to protect against the
 	  POODLE attack (STR #4476)
 	- Printer sharing did not work when systemd was being used (STR #4497)
+	- cupsGetPPD* would return a symlink to the PPD in /etc/cups/ppd even if
+	  it was not readable by the user (STR #4500)
+	- The web interface now protects against frame "click-jacking" attacks
+	  (STR #4492)
 	- Fixed a crash in ippAttributeString (<rdar://problem/17903871>)
 	- RPMs did not build (STR #4490)
 
